--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "portfolio",
-  "homepage": "https://Lucas-Merino.github.io/Porfolio-real/",
+  "homepage": "https://Lucas-Merino.github.io/Porfolio-real",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
